--- a/scss/header/_login.scss
+++ b/scss/header/_login.scss
@@ -10,6 +10,7 @@
     .feather {
       width: 18px;
       height: 18px;
+      color: $--color-white;
     }
 
     .icon-vertical {
